--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ProjetoMobile",
-    "slug": "ProjetoMobile",
+    "name": "Contador",
+    "slug": "Contador",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
